--- a/css/bootstrap-cerulean.css
+++ b/css/bootstrap-cerulean.css
@@ -616,12 +616,13 @@ input[type="tel"],
 input[type="color"],
 .uneditable-input {
   display: inline-block;
-  height: 18px;
+  height: 38px;
   padding: 4px;
   margin-bottom: 9px;
   font-size: 13px;
   line-height: 18px;
   color: #555555;
+  text-align:center;
 }
 input,
 textarea {
